<resources>
    <string name="app_name">IOS Notes</string>
    <string name="tags">Tags</string>
    <string name="new_tag">New Tag</string>
    <string name="edit">Edit</string>
    <string name="setting">Setting</string>
    <string name="set_password">Set Password</string>
    <string name="set_password_success">Password created successfully</string>
    <string name="remove_ads">Remove Ads</string>
    <string name="more_app">More Apps</string>
    <string name="widget_background">Widget style</string>
    <string name="rate_now">Rate app</string>
    <string name="policy">Privacy Policy</string>
    <string name="tag_name_empty">Tag name is empty</string>
    <string name="tag_name_hint">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="new_tag_des">Enter a name for this tag</string>
    <string name="action_cancel">Cancel</string>
    <string name="rename_tag">Rename Tag</string>
    <string name="rename_tag_des">Enter a new name for this tag</string>
    <string name="create_button">Create</string>
    <string name="action_rename">Rename</string>
    <string name="action_delete">Delete</string>
    <string name="confirm_delete_info">This action will delete tag only. All notes in this tag would not be deleted.</string>
    <string name="confirm_delete_tag">Delete tag?</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_msg">Enter new password for your notes</string>
    <string name="change_password_success">Password changed successfully</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="set_pass_msg">This password would be used to lock/unlock ALL your notes</string>
    <string name="hint_old_pass">Old Password</string>
    <string name="hint_password">New Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="ok">Ok</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_password_to_view">Enter password to open this note</string>
    <string name="msg_enter_password">Please enter password</string>
    <string name="msg_incorrect_old_pass">Old password is incorrect</string>
    <string name="msg_password_mismatch">Password mismatch</string>
    <string name="msg_re_enter_password">Please re-enter password to confirm</string>
    <string name="choose_tag_color">Choose Tag color</string>
    <string name="action_move">Move</string>
    <string name="done">Done</string>
    <string name="create_new_note">to create new note</string>
    <string name="click">Press</string>
    <string name="keep_note_delete_info">Notes are available here for 30 days. After that time, notes will be permanently deleted.</string>
    <string name="note_locked_string">Locked</string>
    <string name="choose_action">Choose Action</string>
    <string name="action_recover">Recover note</string>
    <string name="action_delete_permanent">Delete permanently</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="untitled">Untitled</string>
    <string name="scan">Scan QR</string>
    <string name="pin">Pin</string>
    <string name="lock">Lock</string>
    <string name="bottom_menu_action_delete">Delete</string>
    <string name="share_note">Share Note</string>
    <string name="move_note">Move Note</string>
    <string name="create_widget">Add widget to Home screen</string>
    <string name="unlock">Unlock</string>
    <string name="unpin">Unpin</string>
    <string name="note_locked">Note has been locked</string>
    <string name="note_unlocked">Note has been unlocked</string>
    <string name="widget_notify_feature_not_supported">This feature is not supported on your phone\'s android version</string>
    <string name="widget_notify_note_already_added_msg">This note has already pinned to Home screen</string>
    <string name="count_note_title_single">Note</string>
    <string name="count_note_title_multiple">Notes</string>
    <string name="recovery_note_successfully">Recover note successfully</string>
    <string name="password_incorrect">Password Incorrect</string>
    <string name="all_notes">Notes</string>
    <string name="pin_to_top">Pinned to top</string>
    <string name="un_pin_note">Unpinned</string>
    <string name="note_keep_30_day">Notes that you delete are kept for up to 30 days in Recently Deleted folder.</string>
    <string name="delete_button">Delete</string>
    <string name="delete_note">Delete Note?</string>
    <string name="confirm_discard_note">Are you sure you want to discard this new note?</string>
    <string name="discard_button">Discard</string>
    <string name="discard_note">Discard Note</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="delete_photo">Delete Photo</string>
    <string name="confirm_delete_image">Are you sure you want to delete this photo?</string>
    <string name="camera_permission_denied">Permission denied, you need allow camera permission to use this feature</string>
    <string name="add_result_to_note">Add to Note</string>
    <string name="scan_result_title">Scan Result</string>
    <string name="moved_to_new_tag">Note moved to tag</string>
    <string name="move_to_this_tag">Also move your note to this new tag</string>
    <string name="dialog_choose_tag_title">Move to</string>
    <string name="pinned">Pinned</string>
    <string name="widget_notify_success_created_msg">Note widget added to Home screen successfully</string>
    <string name="left">Left</string>
    <string name="center">Center</string>
    <string name="right">Right</string>
    <string name="alignment">Alignment</string>
    <string name="word_count">Word note count</string>
    <string name="zero">0</string>
    <string name="text_size">Text note size</string>
    <string name="hundred">100%</string>
    <string name="bold">Bold</string>
    <string name="italic">Italic</string>
    <string name="underline">Underline</string>
    <string name="strikethrough">Strikethrough</string>
    <string name="choose_background">Choose Background</string>
    <string name="sort_alphabetic_ascending">Ascending A-Z</string>
    <string name="sort_alphabetic_descending">Descending Z-A</string>
    <string name="sort_alphabetic_time">Sort Time</string>
</resources>