<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:background="@drawable/bg_ios_dialog"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/EdtTagName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_edit"
            android:gravity="start"
            android:hint="@string/tag_name_hint"
            android:inputType="none|text|textCapSentences|textNoSuggestions"
            android:maxLines="1"
            android:padding="10dp"
            android:textColor="@color/black"
            android:textColorHint="#e4e4e4"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvNewTagSubTitle" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ViewNewTagMiddle">

            <TextView
                android:id="@+id/TvCancelNewTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/ViewSeparateDialog"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/ios_blue" />

            <TextView
                android:id="@+id/TvSaveNewTag"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/ViewSeparateDialog"
                android:gravity="center"
                android:text="@string/save"
                android:textColor="@color/ios_blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/ViewSeparateDialog"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/ios_grey" />
        </RelativeLayout>


        <TextView
            android:id="@+id/TvNewTagTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/new_tag"
            android:textColor="#000"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/TvNewTagSubTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/new_tag_des"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/TvNewTagTitle" />

        <View
            android:id="@+id/ViewNewTagMiddle"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/ios_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/EdtTagName" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>