<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    android:orientation="vertical"
    app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingLeft="@dimen/_16sdp"
        android:paddingEnd="@dimen/_16sdp">

        <ImageButton
            android:id="@+id/btn_close_bottom_menu"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:layout_alignParentEnd="true"
            android:adjustViewBounds="true"
            android:background="@drawable/button_black_trans"
            android:padding="4dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_close" />

        <ImageView
            android:id="@+id/img_attach_thumbnail_bottom_menu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="6dp"
            android:scaleType="centerInside"
            android:src="@drawable/rose" />

        <TextView
            android:id="@+id/tv_note_date_bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_note_title_bottom_menu"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@+id/img_attach_thumbnail_bottom_menu"
            android:fontFamily="sans-serif"
            android:text="8/18/20"
            android:textColor="@color/ios_sys_second_label"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/tv_note_title_bottom_menu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="60dp"
            android:layout_toEndOf="@+id/img_attach_thumbnail_bottom_menu"
            android:ellipsize="end"
            android:fontFamily="sans-serif-medium"
            android:gravity="top"
            android:maxLines="1"
            android:text="notes"
            android:textColor="@color/black"
            android:textSize="17sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_separate_notes_list"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="18dp"
        android:background="@color/separator_color" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_16sdp"
        android:weightSum="4">

        <LinearLayout
            android:id="@+id/ll_action_scan"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_note_item_rounded"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="4dp"
                android:src="@drawable/ic_scan_qr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/scan"
                android:textColor="@color/ios_blue"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_pin"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_note_item_rounded"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_pin_unpin"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="3dp"
                android:src="@drawable/ic_pin" />

            <TextView
                android:id="@+id/tv_note_pin_bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/pin"
                android:textColor="@color/app_icon_color"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_lock"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_note_item_rounded"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_lock_unlock"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="4dp"
                android:src="@drawable/ic_lock" />

            <TextView
                android:id="@+id/tv_note_lock_bottom_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/lock"
                android:textColor="@color/ios_sys_indigo"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_action_delete"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="3dp"
            android:layout_weight="1"
            android:background="@drawable/bg_note_item_rounded"

            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:padding="1dp"
                android:src="@drawable/ic_delete" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/bottom_menu_action_delete"
                android:textColor="@color/ios_sys_red"
                android:textSize="@dimen/_15ssp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/_16sdp"
        android:paddingTop="0dp"
        android:paddingEnd="@dimen/_16sdp"
        android:paddingBottom="@dimen/_16sdp">

        <RelativeLayout
            android:id="@+id/rl_action_share_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_round_top"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="3dp"
                android:src="@drawable/ic_export" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/share_note"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_color" />

        <RelativeLayout
            android:id="@+id/rl_action_move_note"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_middle"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="5dp"
                android:src="@drawable/ic_folder" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/move_note"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_color" />

        <RelativeLayout
            android:id="@+id/rl_action_create_widget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_round_bottom"
            >

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:padding="2dp"
                android:src="@drawable/ic_widgets" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="50dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/create_widget"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />
        <RelativeLayout
            android:id="@+id/rl_action_word_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_round_bottom"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_toStartOf="@+id/tv_count"
                android:fontFamily="sans-serif-medium"
                android:text="@string/word_count"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/zero"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/separator_color" />

        <RelativeLayout
            android:id="@+id/rl_action_text_size"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_round_bottom"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_toStartOf="@+id/tv_size"
                android:fontFamily="sans-serif-medium"
                android:text="@string/text_size"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/hundred"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/separator_color" />
        <RelativeLayout
            android:id="@+id/rl_action_font_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_note_item_round_bottom">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_toStartOf="@+id/tv_alignment"
                android:fontFamily="sans-serif-medium"
                android:text="@string/alignment"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tv_alignment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/left"
                android:textColor="@color/black"
                android:textSize="16sp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
