<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:aapt="http://schemas.android.com/aapt"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_scan_result_dialog"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/_20sdp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_scan_result_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:fontFamily="sans-serif-medium"
            android:gravity="center"
            android:text="@string/scan_result_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textColor="#000"
            android:textSize="15sp" />
        <TextView
            android:id="@+id/tv_scan_result_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_scan_result_title"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:text="https://"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:id="@+id/ViewDialogQRCode"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_scan_result_content"
            android:background="@color/ios_grey" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ViewDialogQRCode">

            <TextView
                android:id="@+id/tv_cancel_scan_result"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toStartOf="@+id/view_separate_dialog"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="@color/ios_blue" />

            <TextView
                android:id="@+id/tv_add_to_note"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/view_separate_dialog"
                android:gravity="center"
                android:text="@string/add_result_to_note"
                android:textColor="@color/ios_blue"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view_separate_dialog"
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_centerInParent="true"
                android:background="@color/ios_grey" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
